--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://divyanshupadhyay.github.io/PortfolioDivyansh",
   "name": "portfolio",
   
   "version": "0.1.0",
@@ -86,8 +86,8 @@
   
     
   "start": "react-scripts start",
-  
-    
+  "predeploy" : "npm run build",
+   "deploy" : "gh-pages -d build",
   "build": "react-scripts build",
   
     
